deploy/mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: iot-sad-zvuk
  labels:
    app: mosquitto
spec:
  type: NodePort
  selector:
    app: mosquitto
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
      nodePort: 31883
