deploy/zvuk-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zvuk-server
  namespace: iot-sad-zvuk
spec:
  selector:
    app: zvuk-server
  ports:
    - port: 80
      targetPort: http
